--- a/bricoscope/package.json
+++ b/bricoscope/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bricoscrope",
+  "name": "bricoscope",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
