--- a/bricoscope/angular.json
+++ b/bricoscope/angular.json
@@ -112,7 +112,7 @@
               }
             ],
             "styles": ["src/global.scss", "src/theme/variables.scss"],
-            "scripts": []
+            "scripts": ["src/assets/js/opencv.js"]
           },
           "configurations": {
             "ci": {
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": false
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
