--- a/bricoscope/package.json
+++ b/bricoscope/package.json
@@ -36,6 +36,7 @@
     "@ionic/react": "^8.4.0",
     "browser-image-resizer": "^2.4.1",
     "firebase": "^10.14.1",
+    "gapi-script": "^1.2.0",
     "globby": "^14.0.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
