Ajout des packages de TensorFlow.JS

--- a/bricoscope/package.json
+++ b/bricoscope/package.json
@@ -34,11 +34,15 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/react": "^8.4.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-core": "^4.22.0",
+    "@tensorflow/tfjs-layers": "^4.22.0",
     "browser-image-resizer": "^2.4.1",
     "firebase": "^10.14.1",
     "gapi-script": "^1.2.0",
     "globby": "^14.0.2",
     "ionicons": "^7.0.0",
+    "long": "^5.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
