--- a/bricoscope/angular.json
+++ b/bricoscope/angular.json
@@ -20,7 +20,11 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "allowedCommonJsDependencies": [
-              "long"
+              "long",
+              "@tensorflow/tfjs",
+              "@tensorflow/tfjs-core",
+              "@tensorflow/tfjs-backend-webgl",
+              "@tensorflow/tfjs-backend-cpu"
             ],
             "assets": [
               {
