--- a/bricoscope/package.json
+++ b/bricoscope/package.json
@@ -34,15 +34,16 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/react": "^8.4.0",
-    "@tensorflow/tfjs": "^4.22.0",
-    "@tensorflow/tfjs-core": "^4.22.0",
-    "@tensorflow/tfjs-layers": "^4.22.0",
+    "@tensorflow/tfjs": "^4.1.0",
+    "@tensorflow/tfjs-core": "^4.21.0",
+    "@tensorflow/tfjs-layers": "^4.21.0",
+    "@types/long": "^4.0.2",
     "browser-image-resizer": "^2.4.1",
     "firebase": "^10.14.1",
     "gapi-script": "^1.2.0",
     "globby": "^14.0.2",
     "ionicons": "^7.0.0",
-    "long": "^5.2.4",
+    "long": "^5.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -74,7 +75,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.0"
+    "typescript": "^5.4.5"
   },
   "description": "An Ionic project"
 }
